--- a/helloword/src/variables.scss
+++ b/helloword/src/variables.scss
@@ -4,6 +4,7 @@ $secondarycolor: #FFE7D2;
 $tertiarycolor: #58402c;
 $bluecolor: #30488f;
 $bluescuro: #233569;
+$grigio: grey;
 $grigino: #bdb5af;
 
 @mixin positionFixed {
