--- a/helloword/src/app.scss
+++ b/helloword/src/app.scss
@@ -79,7 +79,33 @@ header {
       padding-right: 50px;
       font-size: $fontHeader;
       font-weight: bold;
+      a:hover {
+        color: $bluecolor;
+        }
       }
+      .padre-drop {
+        position: relative;
+        &:hover {
+          .dropdown {
+            display: block;
+          }
+        }
+        .dropdown {
+          display: none;
+          position: absolute;
+          top: 25px;
+          left: 0px;
+          background: white;
+          padding: 10px 20px 0px 10px;
+          border: solid 1px lightgrey;
+          border-radius: 5px;
+          li {
+            padding-right: 0;
+            padding-bottom: 10px;
+          }
+        }
+      }
+
     }
     button {
       border: solid 1px $bluecolor;
@@ -120,7 +146,6 @@ main {
     font-weight: lighter;
     padding: 30px 0;
   }
-
   a {
     font-size: $fontsmall;
   }
@@ -257,6 +282,49 @@ main {
     padding: 40px 0;
     a {
       font-size: $fontsmall;
+      &:hover {
+        color: #30488f;
+      }
     }
   }
+}
+
+// footer
+footer {
+  padding: 100px;
+  h5 {
+    font-size: $fontH5;
+  }
+  .logo-footer {
+    flex-basis: calc(100% - 70%);
+    // margin-right: 50px;
+    img {
+      width: 125px;
+      align-self: flex-start;
+    }
+    h5 {
+      padding-left: 18px;
+      span {
+        color: $bluecolor;
+      }
+    }
+  }
+  .container-lista-footer {
+    flex-basis: calc(100% - 30%);
+    padding-left: 60px;
+    .lista-footer {
+      flex-basis: calc(100% / 4);
+      ul {
+        padding-top: 20px;
+        li {
+          font-size: $fontsmall;
+          padding-bottom: 10px;
+          a:hover {
+            color: #30488f;
+          }
+        }
+      }
+    }
+  }
+
 }
